# ReturnOfModdingBase

./: CMakeLists.txt  CMakeSettings.json  README.md  linux_msvc_dev_setup.md
cmake_scripts/: async-logger.cmake  cxxopts.cmake  hashmap.cmake  imgui.cmake  json.cmake  lua.cmake  magic_enum.cmake  polyhook.cmake  toml.cmake
docs/lua_docs_generator/: doc_gen.py
src/: main.cpp  main.cpp.test
src/asi_loader/: asi_loader.cpp  asi_loader.hpp
src/config/: config.cpp  config.hpp
src/debug/: debug.hpp
src/directory_watcher/: directory_watcher.cpp  directory_watcher.hpp
src/file_manager/: cache_file.cpp  cache_file.hpp  file.cpp  file.hpp  file_manager.cpp  folder.cpp  folder.hpp
src/fonts/: icons.cpp  storopia.cpp
src/gui/: imgui_include.hpp
src/gui/widgets/: imgui_extensions.hpp  imgui_hotkey.hpp
src/hooks/: call_hook.cpp  detour_hook.cpp  detour_hook.hpp  hooking.cpp  hooking.hpp  vmt_hook.hpp  vtable_hook.hpp
src/input/: hotkey.cpp  hotkey.hpp
src/logger/: exception_handler.cpp  exception_handler.hpp  logger.cpp  logger.hpp  stack_trace.cpp  stack_trace.hpp
src/lua/: lua_manager.cpp  lua_manager.hpp  lua_module.cpp  lua_module.hpp  sol_include.hpp
src/lua/bindings/: asmjit_helper.cpp  asmjit_helper.hpp  gui.cpp  gui.hpp  imgui.hpp  imgui_window.hpp  log.cpp  log.hpp  memory.cpp  memory.hpp  path.cpp  path.hpp  paths.cpp  paths.hpp  raw_imgui_callback.hpp  runtime_func_t.cpp  runtime_func_t.hpp  type_info_t.cpp  type_info_t.hpp
src/lua/bindings/toml/: toml_lua.cpp
src/lua/bindings/toml/DataTypes/DateAndTime/: dateAndTime.hpp
src/lua/bindings/toml/utilities/: utilities.hpp
src/lua/bindings/toml_v2/: toml_lua_v2.cpp  toml_lua_v2.hpp
src/memory/: all.hpp  batch.hpp  byte_patch.hpp  byte_patch_manager.cpp  gm_address.hpp  module.cpp  module.hpp  pattern.cpp  range.cpp  range.hpp  rw.hpp
src/paths/: paths.cpp  paths.hpp
src/rom/: info.hpp  init.hpp  rom.cpp  rom.hpp
src/string/: string.hpp  string_conversions.hpp
src/threads/: thread_pool.cpp  thread_pool.hpp  util.cpp  util.hpp
src/toml_v2/: acceptable_value_base.hpp  config_definition.hpp  config_description.hpp  config_file.cpp  config_file.hpp  toml_type_converter.hpp
